# coco-qdec-old

./: CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt  QuadratureDecoder.cpp  QuadratureDecoder.hpp
coco/emu/coco/platform/: RotaryButton.cpp  RotaryButton.hpp  RotaryButton_emu.cpp  RotaryButton_emu.hpp  RotaryKnob_emu.cpp  RotaryKnob_emu.hpp
coco/native/coco/platform/: QuadratureDecoderDummy.cpp  QuadratureDecoderDummy.hpp  QuadratureDecoder_Dummy.cpp  QuadratureDecoder_Dummy.hpp
coco/nrf52/coco/platform/: QuadratureDecoder_QDEC.cpp  QuadratureDecoder_QDEC.hpp
test/: CMakeLists.txt  QuadratureDecoderTest.cpp
test/emu/: QuadratureDecoderTest.hpp
test/native/: QuadratureDecoderTest.hpp
test/nrf52dongle/: QuadratureDecoderTest.hpp
